fix gaps in exchange balance component

--- a/src/components/Portfolio/EchangeBalance/ExchangeBalance.module.css
+++ b/src/components/Portfolio/EchangeBalance/ExchangeBalance.module.css
@@ -65,11 +65,12 @@ ul.tab_navs {
 }
 .info_text {
     font-size: var(--body-size);
-    line-height: var(--body-lh);
+    line-height: 22.5px;
     color: var(--text-grey-light);
-    /* margin: 1rem; */
-    /* position: absolute;
-    bottom: 5px; */
+    font-weight: 200;
+    text-align: center;
+    margin: 8px 0;
+   
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
